# cherenkov-professional

./: .clinerules  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  AGENT_MEMORY.md  AGENT_MISSION_ORCHESTRATION.txt  ARCHITECTURE.md  CHANGELOG.md  CHERENKOV_MASTER_PLAN.md  CHERENKOV_SOVEREIGN_BLUEPRINT.md  CHERENKOV_SSOT.md  CITATION.cff  CLAUDE.md  CLAUDE_COMPRESSED.md  CLAUDE_V4.1.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAQIQ_MASTER_PLAN.md  DAQIQ_PREMORTEM.md  DESIGN.md  DVWA_REPORT.md  Dockerfile  Dockerfile.agent  Dockerfile.optimized  Dockerfile.simple  Dockerfile.tokamak  FINAL_TECHNICAL_SPECIFICATION.md  GEMINI.md  LICENSE  MITHAQ_SOVEREIGN_BLUEPRINT.md  PROJECT_SUMMARY.md  README.md  README_BADGES.txt  REPORT.md  SECURITY.md  SESSION_ACHIEVEMENTS_20260508.md  (+71 more)
daqiq-professional/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_MISSION_ORCHESTRATION.txt  AGENT_NOTES_ORCHESTRATION.md  APPLY_SECURITY_FIXES.md  AUTONOMOUS_DEVELOPMENT_SUMMARY.md  AUTONOMOUS_RUN_SUMMARY.md  AUTONOMOUS_SYSTEM_README.md  CHANGELOG.md  CLAUDE.md  CLAUDE_V4.1.md  CONTRIBUTING.md  DAQIQ_PREMORTEM.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_STATUS.md  ITERATION_7_ANALYSIS.md  MASTER_DOCUMENTATION.md  QUICK_START.md  README.md  README.md.phase0-backup  SECURITY.md  STATUS.md  STRATEGIC_ROADMAP.md  USAGE_GUIDE.md  check-agent-progress.sh  docker-compose.agents.yml  extended-overnight-tasks.yaml  fix_syntax_errors.sh  fly.toml  free-tools-setup.sh  implement_generated_code.py  morning-summary.sh  nohup.out  oracle-cloud-setup.sh  overnight-agent-tasks.yaml  pyproject.toml  (+11 more)
daqiq-professional/.github/: dependabot.yml  release-drafter.yml
daqiq-professional/.github/ISSUE_TEMPLATE/: bug_report.md
daqiq-professional/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
daqiq-professional/.github/workflows/: autonomous-dev.yml  ci-cd.yml  ci.yml  daily_validation.yml  deploy.yml  release-drafter.yml
daqiq-professional/autonomous_development/: batch_1_20260501_054208.txt  batch_1_20260501_054345.txt  batch_1_20260501_054500.txt  batch_1_20260501_054555.txt  batch_1_20260501_054742.txt  batch_1_20260501_055033.txt  batch_1_20260501_055242.txt  batch_1_20260501_055505.txt  batch_1_20260501_055845.txt  batch_1_20260501_060341.txt  batch_1_20260501_060658.txt  batch_1_20260501_064804.txt  batch_1_20260501_065150.txt  batch_1_20260501_065318.txt  batch_1_20260501_113220.txt  batch_1_20260501_113621.txt  batch_1_20260501_113709.txt  batch_1_20260501_113848.txt  batch_1_20260501_113921.txt  batch_1_20260501_114034.txt  batch_1_20260501_114250.txt  batch_1_20260501_114339.txt  batch_1_20260501_114525.txt  batch_1_20260501_114700.txt  batch_1_20260501_114747.txt  batch_1_20260501_115058.txt  batch_1_20260501_115149.txt  batch_1_20260501_115243.txt  batch_1_20260501_115317.txt  batch_1_20260501_115358.txt  batch_1_20260501_115644.txt  batch_1_20260501_115750.txt  batch_1_20260501_115824.txt  batch_1_20260501_115956.txt  batch_1_20260501_120044.txt  batch_1_20260501_120246.txt  batch_1_20260501_120513.txt  batch_1_20260501_121211.txt  batch_1_20260501_121439.txt  batch_1_20260501_121536.txt  (+123 more)
daqiq-professional/candidates/generated_scanners/: cors_misconfiguration_allowing.py  cross_site_request.py  cross_site_scripting.py  deserialization_of_untrusted.py  improper_access_control.py  improper_tls_certificate.py  path_traversal_via.py  sensitive_cookie_without.py  sql_injection_via.py  unrestricted_file_upload.py
daqiq-professional/daqiq-v2/: README.md  SECURITY.md  pyproject.toml
daqiq-professional/deploy/: nginx.conf
daqiq-professional/docs/architecture/: SYSTEM_ARCHITECTURE.md
daqiq-professional/docs/plan/: development_plan.md
daqiq-professional/docs/roadmap/: PRODUCT_ROADMAP.md
daqiq-professional/docs/standards/: CODE_STANDARDS.md
daqiq-professional/examples/autonomous_development/: batch_1_20260501_022712.txt  batch_1_20260501_022817.txt  (+5 more)
daqiq-professional/scripts/: agent_worker.py  analyze_generated_scanners.py  auto_improve_scanners.py  autonomous_orchestration_workflow.py  autonomous_roadmap_executor.py  autonomous_swarm.py  coordinator.py  daqiq_cli.py  daqiq_cli_orchestrate.py  daqiq_simple_scanner.py  daqiq_web.py  demo_complete_system.sh  demo_workflow_execution.py  docker-manage.sh  extract_scanners.py  generate_analytics.py  launch_micro_swarm.py  launch_perfection.sh  orchestration_agent.py  process_extended_tasks.py  refine_scanners.py  start_api_server.sh  start_dashboard.sh  swarm_iteration_10_strategic_planning.py  swarm_iteration_2_implement.py  swarm_iteration_3_complete.py  swarm_iteration_4_polish.py  swarm_iteration_5_integrate.py  swarm_iteration_6_execution.py  swarm_iteration_7_autonomous.py  swarm_iteration_8_auto.py  swarm_iteration_8_complete_system.py  swarm_iteration_9_ci_cd.py  sync_context.py  system_dashboard.py  test_autonomous_developers.py  test_full_autonomous_crew.py  test_groq_planner.py  test_local_agent.py  test_parallel_agents.py  (+2 more)
daqiq-professional/src/: .gitignore  .pre-commit-config.yaml  Dockerfile.optimized  README.md  STATUS.md  analyze_generated_scanners.py  celebration_scan.sh  daqiq_simple_scanner.py  daqiq_web.py  deploy_now.sh  docker-compose.yml  dockerize_everything.sh  extract_scanners.py  finalize_project.sh  launch_perfection_wsl.sh  monitor_perfection.sh  pyproject.toml  requirements.txt  scan_report_20260501_022115.json  system_dashboard.py  test_autonomous_developers.py  test_autonomous_simple.py  test_batched_parallel.py  test_complete_system.py  test_hybrid_orchestrator.py  test_production_ready.py
daqiq-professional/tests/: conftest.py  test_ai_workflows_orchestrator.py  test_batched_parallel.py  test_complete_system.py  test_full_dev_team.py  test_hybrid_orchestrator.py  test_local_agent.py  test_orchestration_api.py  test_parallel_agents.py  test_production_ready.py  test_workflow_integration.py
daqiq-professional/tools/: session_manager.py
daqiq-professional/workflow_results/: parallel_test_20260502_151016.json
(+1164 files in other folders)
