[project]
name = "cherenkov-core"
version = "0.1.1"
description = "cherenkov Security Framework - Precision in Sovereignty"
authors = [
    {name = "Moaid EL-Moatasem Bellah"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.setuptools.package-data]
cherenkov = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "bandit>=1.7.8",
    "ruff>=0.4.0",
    "fastapi>=0.100.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "requests>=2.31.0",
    "crewai>=0.1.0",
    "cryptography>=41.0.0",
    "typer>=0.9.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["packages/cherenkov/autonomous_generated", "packages/cherenkov/scanners/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "S"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"packages/cherenkov/tools/**" = ["F841", "S608"]
"packages/cherenkov/dev_crew/**" = ["S603", "S607"]
"packages/cherenkov/orchestration/ai_workflows_orchestrator.py" = ["E402"]
"tests/**" = ["S603", "S607", "S105", "S311", "E402"]
"scripts/**" = ["S603", "S607", "S602", "E402", "E722"]
"session_manager.py" = ["S607"]
"tools/session_manager.py" = ["S607"]
"tools/*.py" = ["S603"]
"benchmarks/**" = ["S108", "S311", "E402"]
"test_*.py" = ["S603", "S607", "B904", "F401"]
"packages/cherenkov/core/tokamak.py" = ["S108", "S311"]
"packages/cherenkov/core/circuit_breaker.py" = ["S607"]
"packages/cherenkov/core/workflow_retry.py" = ["S108", "S311", "S110"]
"packages/cherenkov/core/agent_message_bus.py" = ["S110"]
"packages/cherenkov/cli/main.py" = ["B008"]
"cherenkov_simple_scanner.py" = ["S108"]
"system_dashboard.py" = ["S110"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "candidates"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require external services (Ollama, GROQ, network)",
    "ai_generated: tests for AI-generated code with known pre-existing bugs",
]

[tool.coverage.run]
source = ["cherenkov"]
omit = ["tests/*", "venv/*", "candidates/*", "packages/cherenkov/autonomous_generated/*"]

[tool.coverage.report]
fail_under = 24
precision = 2
show_missing = true

