[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daqiq"
version = "0.2.0"
description = "Local-first AI security testing framework"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]
web = ["fastapi>=0.111.0", "uvicorn[standard]>=0.29.0"]

[project.scripts]
daqiq = "daqiq.cli:main"

[tool.coverage.report]
fail_under = 25
